--- a/templates/pant.html
+++ b/templates/pant.html
@@ -83,6 +83,8 @@
                                       <option value="0" selected="selected">----------Select one pant----</option>
                                       <option value="1">black pant</option>
                                       <option value="2">white pant</option>
+                                      <option value="3">nopant pant</option>
+
 
                                     </select>
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -105,5 +107,7 @@
         </nav>
   <img src="../static/assets/pant7.jpg" class="w3-border w3-padding" alt="Norway" style="width:300px;height:460px;">
     <img src="../static/assets/pant21.png" class="w3-border w3-padding" alt="Norway" style="width:300px;height:460px;">
+    <img src="../static/assets/nopant.png" class="w3-border w3-padding" alt="Norway" style="width:300px;height:460px;">
+
 </body>
 </html>
