--- a/templates/index.html
+++ b/templates/index.html
@@ -1,291 +1,336 @@
-
-
 <html>
-  <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-   crossorigin="anonymous">
- </script>
 
- <style>
- /* body {
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
+    </script>
+
+  <style>
+    /* body {
      background-image: url("../static/assets/bg.png");
       background-size: cover;
       background-repeat: no-repeat;
      /*background-color: #cccccc;*/
 
- body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-} 
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
 
-header {
-  background-color: #333;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-}
+    header {
+      background-color: #333;
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem;
+    }
 
-header h1 {
-  margin: 0;
-}
+    header h1 {
+      margin: 0;
+    }
 
-header nav ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+    header nav ul {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
 
-header nav a {
-  color: #fff;
-  text-decoration: none;
-  padding: 1rem;
-}
+    header nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 1rem;
+    }
 
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: calc(100vh - 4rem);
-}
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: calc(100vh - 4rem);
+    }
 
-main h2 {
-  margin-bottom: 1rem;
-}
+    main h2 {
+      margin-bottom: 1rem;
+    }
 
-main p {
-  margin-bottom: 2rem;
-  text-align: center;
-}
+    main p {
+      margin-bottom: 2rem;
+      text-align: center;
+    }
 
-.cta {
-  background-color: #333;
-  color: #fff;
-  padding: 0.5rem 1rem;
-  text-decoration: none;
-}
+    .cta {
+      background-color: #333;
+      color: #fff;
+      padding: 0.5rem 1rem;
+      text-decoration: none;
+    }
 
-footer {
-  background-color: #333;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  padding: 1rem;
-  margin-top: 470px;
-}
+    footer {
+      background-color: #333;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      padding: 1rem;
+      margin-top: 470px;
+    }
 
-.top_header_lifestyle{
-  font-size: 9px;
-  display:flex;
- 
-}
+    .top_header_lifestyle {
+      font-size: 9px;
+      display: flex;
 
-.left_top_header{
-  margin-left: 300px;
-}
+    }
 
-.right_top_header{
-  margin-left:320px
-}
-.life_style_second_header{
-  background: #f7f8f7;
+    .left_top_header {
+      margin-left: 300px;
+    }
 
-}
+    .right_top_header {
+      margin-left: 320px
+    }
 
-.second_header_tags{
-  margin-top:5px;
-  display: flex;
-  gap:18px;
-  justify-content: center;
-  place-items: center;
-}
+    .life_style_second_header {
+      background: #f7f8f7;
 
+    }
 
-.second_header{
-  display: flex;
-  flex-direction: row;
-  font-size: 10px;
-  margin-left: 200px;
-}
+    .second_header_tags {
+      margin-top: 5px;
+      display: flex;
+      gap: 18px;
+      justify-content: center;
+      place-items: center;
+    }
 
 
-.search_box{
-
-  font-size: 12px;
-
-}
-
-.third_header{
-  background:linear-gradient(109.6deg, rgb(255, 194, 48) 11.2%, rgb(255, 124, 0) 100.2%);
-  padding:15px;
-}
-
-.entry_Screen{
-
-  margin-left:550px;
-  margin-top: 120px;
-  /* margin-bottom: 200px; */
-  
-
-}
+    .second_header {
+      display: flex;
+      flex-direction: row;
+      font-size: 10px;
+      margin-left: 200px;
+    }
 
 
+    .search_box {
 
- </style>
+      font-size: 12px;
 
-   <script>
-     $(document).ready(function() {
-       $('#company').change(function() {
+    }
 
-         var company = $('#company').val();
-         console.log(company)
-         // Make Ajax Request and expect JSON-encoded data
-         $.getJSON(
-           'http://127.0.0.1:1212/get_models' + '/' + company,
-           function(data) {
+    .third_header {
+      background: linear-gradient(109.6deg, rgb(255, 194, 48) 11.2%, rgb(255, 124, 0) 100.2%);
+      padding: 15px;
+    }
 
-             // Remove old options
-             $('#models').find('option').remove();
+    .entry_Screen {
 
-             // Add new items
-             $.each(data, function(key, val) {
-               var option_item = '<option value="' + val + '">' + val + '</option>'
-               $('#models').append(option_item);
-             });
-           }
-         );
-       });
-     });
-   </script>
-    <title>Smart Trial Room</title>
-  </head>
-  <body>
-
-    <header>
+      margin-left: 550px;
+      margin-top: 120px;
+      /* margin-bottom: 200px; */
 
 
-   
+    }
 
-      <nav>
+    .intro_button {
 
-        <div class="top_header_lifestyle">
+      padding: 13px;
+      background: radial-gradient(circle at 10% 20%, rgb(254, 255, 165) 0%, rgb(255, 232, 182) 90%);
+      outline: none;
+      border: none;
+      border-radius: 10px;
+      margin: 10px;
 
-          <ul class="left_top_header">
-            <li><a href="#">Free Shipping</a></li>
-            <li><a href="#">Click and Connect</a></li>
-            <li><a href="#">Return To Store</a></li>
-     
-          </ul>
+    }
 
-         <ul class="right_top_header">
-          <li><a href="#">Download our Apps  <span>|</span></a></li>
+    .intro_button:hover {
+      background: #323233;
+      color: white;
+    }
+  </style>
+
+  <script>
+    $(document).ready(function () {
+      $('#company').change(function () {
+
+        var company = $('#company').val();
+        console.log("mugesh",company)
+        // Make Ajax Request and expect JSON-encoded data
+        $.getJSON(
+          'http://127.0.0.1:1212/get_models' + '/' + company,
+          function (data) {
+
+            // Remove old options
+            $('#models').find('option').remove();
+
+            // Add new items
+            $.each(data, function (key, val) {
+              var option_item = '<option value="' + val + '">' + val + '</option>'
+              $('#models').append(option_item);
+            });
+          }
+        );
+      });
+    });
+  </script>
+  <title>Smart Trial Room</title>
+</head>
+
+<body>
+
+  <header>
+
+
+
+
+    <nav>
+
+      <div class="top_header_lifestyle">
+
+        <ul class="left_top_header">
+          <li><a href="#">Free Shipping</a></li>
+          <li><a href="#">Click and Connect</a></li>
+          <li><a href="#">Return To Store</a></li>
+
+        </ul>
+
+        <ul class="right_top_header">
+          <li><a href="#">Download our Apps <span>|</span></a></li>
           <li><a href="#">Store Locator <span>|</span></a></li>
           <li><a href="#">Help</a></li>
-         </ul> 
-        </div>
-      </nav>
-    </header>
-    <div class="second_header">
-    <img height="50px" src="https://blog.lifestylestores.com/wp-content/uploads/2021/02/Lifestyle-Logo-1160x444-1-800x306.webp"/>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="second_header">
+    <img height="50px"
+      src="https://blog.lifestylestores.com/wp-content/uploads/2021/02/Lifestyle-Logo-1160x444-1-800x306.webp" />
     <div class="second_header_tags">
       <h5>Women</h5>
       <h5>Men</h5>
       <h5>Kids</h5>
       <h5>Shoes & Bags</h5>
       <h5>Beauty</h5>
-<div class="search_box">
-  <input type="search" placeholder="What are you looking for?"/>
+      <div class="search_box">
+        <input type="search" placeholder="What are you looking for?" />
 
 
 
-</div>
-<h5>More</h5>
-<h5>|</h5>
-<h5>Sign Up / Sign In</h5>
-
-    </div>
-    </div>
-
-    <div class="third_header">
+      </div>
+      <h5>More</h5>
+      <h5>|</h5>
+      <h5>Sign Up / Sign In</h5>
 
     </div>
+  </div>
+
+  <div class="third_header">
+
+  </div>
 
 
-    <div class="entry_Screen">
-      <button id="button-a">Virtual Try On</button>
-    <button id="button-b" onclick="window.location.href='http://localhost:8080'">Upload and Try On</button>
+  <div class="entry_Screen">
+    <button id="button-a" class="intro_button">Virtual Try On</button>
+    <button id="button-b" class="intro_button" onclick="window.location.href='http://34.27.195.140'">Upload and Try
+      On</button>
 
-    </div>
-    
+  </div>
 
 
-<div id="modal-container" style="display:none;">
+
+  <div id="modal-container" style="display:none;">
     <main>
-        <h2>Clothing Collection</h2>
-        <p>Explore our latest clothing styles and trends.</p>
+      <h2>Clothing Collection</h2>
+      <p>Explore our latest clothing styles and trends.</p>
 
-        <div class="modal-content model_2">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Predict</h4>
-            </div>
-            <div class="modal-body">
-                <p>Select a shirt</p>
-                <form class="form-inline" action="http://127.0.0.1:5000/predict" method="post">
-                    <select name="shirt" class="form-control" id="company">
-                        <option value="0" selected="selected">----------Select one shirt----</option>
-                        <option value="1">black shirt</option>
-                        <option value="2">blue shirt</option>
-                        <option value="3">dupli shirt</option>
-                        <option value="4">black shirt</option>
-                    </select>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <p>Select a pant</p>
-                    <select name="pant" class="form-control" id="company">
-                        <option value="0" selected="selected">----------Select one pant----</option>
-                        <option value="1">black pant</option>
-                        <option value="2">white pant</option>
-                    </select>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                    <button type="submit" class="btn btn-default pull-right">Try</button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                </form>
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+      <div class="modal-content model_2">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Predict</h4>
         </div>
+        <div class="modal-body">
+          <p>Select a shirt</p>
+          <form class="form-inline" action="http://127.0.0.1:5000/predict" method="post">
+            <select name="shirt" class="form-control" id="company">
+                <option value="0" selected="selected">----------Select one shirt----</option>
+                <option value="1">Orange Hoodie</option>
+                <option value="2">Blue Shirt</option>
+                <option value="3">Black T-Shirt</option>
+                <option value="4">Green Top</option>
+                <option value="5">White Winter Top</option>
+                <option value="6">Red Top</option>
+                <option value="7">White Blazier</option>
+
+
+
+            </select>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <p>Select a pant</p>
+            <select name="pant" class="form-control" id="company">
+                <option value="0" selected="selected">----------Select one pant----</option>
+                <option value="1">No Pant</option>
+                <option value="2">Blue Pant</option>
+
+          
+            </select>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        
+            <button type="submit" class="btn btn-default pull-right">Try</button>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        
+        </form>
+        
+        <div id="selected_items">
+            <p>Selected shirt: <span id="selected_shirt"></span></p>
+            <p>Selected pant: <span id="selected_pant"></span></p>
+        </div>
+        
+        <script>
+            // Get the select elements
+            const shirtSelect = document.querySelector('select[name="shirt"]');
+            const pantSelect = document.querySelector('select[name="pant"]');
+        
+            // Get the span elements for displaying the selected items
+            const selectedShirt = document.getElementById('selected_shirt');
+            const selectedPant = document.getElementById('selected_pant');
+        
+            // Add event listeners to the select elements to update the selected items
+            shirtSelect.addEventListener('change', function () {
+                selectedShirt.textContent = shirtSelect.options[shirtSelect.selectedIndex].text;
+            });
+        
+            pantSelect.addEventListener('change', function () {
+                selectedPant.textContent = pantSelect.options[pantSelect.selectedIndex].text;
+            });
+        </script>
+        
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
     </main>
-</div>
+  </div>
 
-<script>
-    document.getElementById("button-a").addEventListener("click", function() {
-        document.getElementById("modal-container").style.display = "block";
+  <script>
+    document.getElementById("button-a").addEventListener("click", function () {
+      document.getElementById("modal-container").style.display = "block";
     });
 
-    document.getElementById("button-b").addEventListener("click", function() {
-        document.getElementById("modal-container").style.display = "none";
+    document.getElementById("button-b").addEventListener("click", function () {
+      document.getElementById("modal-container").style.display = "none";
     });
-</script>
+  </script>
 
-  
-    <footer>
-      <p>&copy; 2023 Lifestyle Store</p>
-    </footer>
-  </body>
+
+  <footer>
+    <p>&copy; 2023 Lifestyle Store</p>
+  </footer>
+</body>
 
 </html>
-
-
-
