--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,7 @@
 
   <div class="entry_Screen">
     <button id="button-a" class="intro_button">Virtual Try On</button>
-    <button id="button-b" class="intro_button" onclick="window.location.href='http://34.31.45.30/'">Upload and Try
+    <button id="button-b" class="intro_button" onclick="window.location.href='http://35.232.69.164//'">Upload and Try
       On</button>
 
   </div>
