--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,7 @@
 
   <div class="entry_Screen">
     <button id="button-a" class="intro_button">Virtual Try On</button>
-    <button id="button-b" class="intro_button" onclick="window.location.href='http://35.232.69.164//'">Upload and Try
+    <button id="button-b" class="intro_button" onclick="window.location.href='http://35.232.69.164/'">Upload and Try
       On</button>
 
   </div>
@@ -257,11 +257,13 @@
             <select name="shirt" class="form-control" id="shirt_select">
               <option value="0" selected="selected">----------Select one shirt----</option>
               <option value="1" data-image="https://iili.io/HO1zyX4.png">Orange Hoodie</option>
-              <option value="2" data-image="https://iili.io/HO1Id1S.png">Blue Shirt</option>
+              <option value="2" data-image="https://i.postimg.cc/Gm6mGgTd/shirt2.png">Lace Top</option>
               <option value="3" data-image="https://iili.io/HO1I9Ll.jpg">Black T-Shirt</option>
               <option value="4" data-image="https://iili.io/HO1zDes.png">Green Top</option>
               <option value="5" data-image="https://iili.io/HO1zbmG.png">White Winter Top</option>
-              <option value="6" data-image="https://iili.io/HO1zpIf.png">White Blazer</option>
+              <option value="6" data-image="https://i.postimg.cc/3wpJBj2p/3.png">White Top</option>
+              <option value="6=7" data-image="https://i.postimg.cc/FHYKfXRT/shirt12.png">Pink Top</option>
+
             </select>
             <img id="selected_shirt_image" src="" style="max-width: 100px; max-height: 100px; margin-left: 10px;">
             <script>
@@ -281,7 +283,7 @@
             <p>Select a pant</p>
             <select name="pant" class="form-control" id="pant_select">
               <option value="0" selected="selected">----------Select one pant----</option>
-              <option value="1" data-image="https://iili.io/HO1unfV.png">Beige Pant</option>
+              <option value="1" data-image="https://i.postimg.cc/wBSFKztZ/nopant.jpg">White Pant</option>
               <option value="2" data-image="https://iili.io/HO1uT5F.png">Blue Pant</option>
             </select>
             <img id="selected_pant_image" src="" style="max-width: 100px; max-height: 100px; margin-left: 10px;">
