--- a/templates/index.html
+++ b/templates/index.html
@@ -262,7 +262,7 @@
               <option value="4" data-image="https://iili.io/HO1zDes.png">Green Top</option>
               <option value="5" data-image="https://iili.io/HO1zbmG.png">White Winter Top</option>
               <option value="6" data-image="https://i.postimg.cc/3wpJBj2p/3.png">White Top</option>
-              <option value="6=7" data-image="https://i.postimg.cc/FHYKfXRT/shirt12.png">Pink Top</option>
+              <option value="7" data-image="https://i.postimg.cc/FHYKfXRT/shirt12.png">Pink Top</option>
 
             </select>
             <img id="selected_shirt_image" src="" style="max-width: 100px; max-height: 100px; margin-left: 10px;">
