--- a/templates/index.html
+++ b/templates/index.html
@@ -257,11 +257,11 @@
             <select name="shirt" class="form-control" id="shirt_select">
               <option value="0" selected="selected">----------Select one shirt----</option>
               <option value="1" data-image="https://iili.io/HO1zyX4.png">Orange Hoodie</option>
-              <option value="2" data-image="https://i.postimg.cc/Gm6mGgTd/shirt2.png">Lace Top</option>
+              <option value="2" data-image="https://i.postimg.cc/Gm6mGgTd/shirt2.png">White Top</option>
               <option value="3" data-image="https://iili.io/HO1I9Ll.jpg">Black T-Shirt</option>
               <option value="4" data-image="https://iili.io/HO1zDes.png">Green Top</option>
               <option value="5" data-image="https://iili.io/HO1zbmG.png">White Winter Top</option>
-              <option value="6" data-image="https://i.postimg.cc/3wpJBj2p/3.png">White Top</option>
+              <option value="6" data-image="https://i.postimg.cc/3wpJBj2p/3.png">Lace Top</option>
               <option value="7" data-image="https://i.postimg.cc/FHYKfXRT/shirt12.png">Pink Top</option>
 
             </select>
